Update score logic and display and add WDL option
Moved score styling logic to Bot instead of Interface

Added an option to also display chess Win-Draw-Loss evaluation

Renamed some camelCase variables (named after JavaScript equivalents) to snake_case

--- a/config_example.ini
+++ b/config_example.ini
@@ -22,6 +22,8 @@ protocol = uci
 [interface]
 # options: arrow or square
 draw_type = arrow
+# win-draw-loss evaluation, used by machine learning models such as Leela Zero
+draw_wdl = False
 
 # direct paths to engine executables starting from [engine][directory]
 [engine_paths_windows]
